# emailAgent

./: .cursorrules  .gitignore  .pre-commit-config.yaml  ASSET_DOCUMENT_MANAGEMENT_README.md  EMAIL_INTERFACE_README.md  GMAIL_SETUP.md  LOGGING_GUIDE.md  MSGRAPH_SETUP.md  Makefile  README.md  RESTART_NOTES.md  app.py  attachment_processing_results_20250609_180352.json  bandit-report.json  check_assets.py  check_bad_patterns.py  check_semantic_memory.py  clear_bad_patterns.py  grabsource.sh  mypy.ini  pyproject.toml  rebuild_semantic_memory.py  requirements-dev.txt  requirements.txt  test_memory_driven_architecture.py
archive/: README.md
archive/jun 23 memory trashed/: environment.template
archive/jun 23 memory trashed/agents/: contact_extractor.py  email_agent.py  spam_detector.py  supervisor.py
archive/jun 23 memory trashed/docs/: MEMORY.md  MEMORY_SYSTEM_ARCHITECTURE.md  REFACTORING_PROGRESS.md  SESSION_SUMMARY.md  WEB_UI_FEATURE_REQUIREMENTS.md
archive/jun 23 memory trashed/knowledge/: asset_data.json  business_rules.json  classification_patterns.json  document_categories.json  sender_mappings.json
archive/jun 23 memory trashed/memory/: __init__.py  base.py  contact.py  episodic.py  openai_base.py  procedural.py  semantic.py
archive/jun 23 memory trashed/scripts/: README.md  cleanup_qdrant.py  debug_msgraph.py  debug_single_email.py  env_memory_example.txt  initialize_memory.py  load_all_knowledge.py  load_all_patterns.py  load_asset_types.py  load_business_rules.py  load_file_type_validation.py  load_into_collections.py  load_new_knowledge.py  load_spam_patterns.py  simple_load_knowledge.py  test_attachments.py  test_email_processing_debug.py
archive/jun 23 memory trashed/tools/: __init__.py  spamassassin_integration.py
archive/jun 23 memory trashed/web_api/: README.md  __init__.py  dependencies.py  main.py
archive/old_data/: README.md  human_review_queue.json  processed_emails.json  processing_runs.json
archive/old_docs/: ASSET_MANAGEMENT_REWRITE_PROGRESS.md  ASSET_MANAGEMENT_REWRITE_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SETUP.md  EMAIL_INTERFACE_README.md  TESTING_GUIDE.md  app_entry_point.py
archive/old_docs/examples/: EMAIL_SYSTEMS_COMPARISON.md  MSGRAPH_README.md
archive/old_knowledge/knowledge/: README.md  asset_data.json  asset_keywords.json  asset_matching_procedures.json  classification_patterns.json  file_type_validation.json
archive/old_logs/: emailagent.log.1  emailagent.log.3  emailagent.log.4  emailagent.log.5
archive/old_web_ui/: app.py
archive/old_web_ui/templates/: assets.html  base.html  contact_memory.html  dashboard.html  edit_sender_mapping.html  email_processing.html  episodic_memory.html  file_browser.html  human_review_item.html  inspect_classification.html  knowledge_base.html  memory_dashboard.html  reclassify_file.html  semantic_memory.html  senders.html  testing_cleanup.html
data/memory/: README.md  episodic_memory.db  episodic_memory_baseline.json  episodic_memory_export.json  memory_status.json  procedural_memory.json  procedural_memory_baseline.json  semantic_memory.json  semantic_memory_baseline.json
docs/: ASSET_DOCUMENT_MANAGEMENT_README.md  ASSET_MANAGEMENT_REWRITE_PROGRESS.md  ASSET_MANAGEMENT_REWRITE_SUMMARY.md  CODING_STANDARDS.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SETUP.md  EMAIL_INTERFACE_README.md  EPISODIC_MEMORY_POLICY.md  GMAIL_SETUP.md  LOGGING_GUIDE.md  MEMORY.md  MEMORY_SYSTEM_OVERHAUL_PLAN.md  MSGRAPH_SETUP.md  NEW_API_DESIGN.md  REFACTORING_PROGRESS.md  SESSION_SUMMARY.md  SYSTEM_OVERVIEW.md  TESTING_GUIDE.md  WEB_UI_FEATURE_REQUIREMENTS.md
examples/: EMAIL_SYSTEMS_COMPARISON.md  MSGRAPH_README.md  complete_email_to_folder_workflow.py  debug_msgraph_filter.py  debug_msgraph_params.py  debug_msgraph_simple.py  email_demo.py  gmail_attachment_processing_results_20250610_113352.json  gmail_client_id  gmail_real_workflow.py  gmail_spam_test.py  msgraph_attachment_processing_results_20250610_131320.json  msgraph_real_workflow.py  msgraph_spam_test.py  quick_attachment_check.py  simple_msgraph_real_test.py  simple_msgraph_test.py  test_asset_document_agent.py  test_contacts_only.py  test_labels.py  test_msgraph_connection.py  test_phase2_integration.py  test_single_date_filter.py  test_spam_labels.py
knowledge/: README.md  asset_configs.json  asset_data.json  asset_matching_procedures.json  asset_types.json  business_rules.json  classification_patterns.json  contact_patterns.json  file_type_validation.json  spam_patterns.json
scripts/: README.md  cleanup_docstrings.py  cleanup_legacy_tests.sh  convert_prints.py  debug_msgraph.py  grabsource.sh  initialize_memory.py  load_all_patterns.py  load_asset_types.py  load_contact_patterns.py  load_spam_patterns.py  memory_management.py  test_harness.py  test_msgraph_simple.py  test_parallel_processing.py
src/: __init__.py  config.py
src/agents/: __init__.py  asset_document_agent.py  asset_document_agent_old.py  contact_extractor.py  email_agent.py  email_graph.py  spam_detector.py  supervisor.py
src/asset_management/: __init__.py
src/email_interface/: __init__.py  base.py  factory.py  gmail.py  msgraph.py
src/memory/: __init__.py  base.py  contact.py  episodic.py  procedural.py  semantic.py  simple_memory.py
src/tests/: __init__.py  demo_email_memory.py  run_tests.py  test_memory.py
src/tools/: __init__.py  spamassassin_integration.py
src/utils/: __init__.py  config.py  logging_system.py  memory_monitor.py
src/web_api/: README.md  dependencies.py  main.py
src/web_api/routers/: ui.py  (+6 more)
src/web_ui/: __init__.py  app.py  human_review.py
templates/: attachments.html  index.html  memory.html
tests/: README.md  __init__.py  demo_email_memory.py  quick_validation_test.py  run_tests.py  simple_phase3_test.py  simple_validation_test.py  test_100_real_emails.py  test_config.py  test_emails_with_attachments.py  test_gmail_integration.py  test_logging_integration.py  test_logging_system.py  test_memory.py  test_msgraph_connection.py  test_msgraph_integration.py  test_msgraph_web_auth.py  test_phase3_classification.py  test_web_ui_smoke.py
(+80 files in other folders)
